welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: type int
var dejaFait : int = 0;
               ^Variables:2: error: not found: type int
var nbPas : int = 0;
            ^Variables:3: error: not found: value estsurBisuit
while (!estsurBisuit) {
        ^